--- a/_locales/zh-cn/HelloBot-strings.json
+++ b/_locales/zh-cn/HelloBot-strings.json
@@ -1,6 +1,7 @@
 {
 
   "HelloBot.Ultrasonic_Car|block": "超声波返回（cm）",
+  "HelloBot.Ultrasonic_CarV2|block": "microbit|V2|超声波返回（cm）",
   "HelloBot.RGB_Car_Program|block": "车身七彩流水灯",
   "HelloBot.RGB_LArm_Program|block": "左手臂七彩流水灯",
   "HelloBot.RGB_RArm_Program|block": "右手臂七彩流水灯",
